--- a/src/index.html
+++ b/src/index.html
@@ -112,9 +112,12 @@
               display: none;
           }
           @keyframes bounce {
-              0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
-              40% {transform: translateY(-30px);}
-              60% {transform: translateY(-15px);}
+            0%, 20%, 100% {transform: scale(1,1) translateY(0);}
+            40% {transform: scale(0.99, 1.01) translateY(-30px);}
+            50% {transform: scale(1.01, 0.99) translateY(0);}
+            60% {transform: scale(1,1) translateY(-15px);}
+            70% {transform: scale(1.01,0.99) translateY(5px);}
+            75% {transform: scale(1,1) translateY(0);}
           }
 
           @keyframes fade-in {
@@ -124,6 +127,7 @@
           }
           #svg-bouncer {
              animation: bounce 1s infinite, fade-in 2s;
+             animation-timing-function: ease;
           }
 
           #loading-svg-container {
@@ -154,7 +158,7 @@
             try {
                 var user = JSON.parse(localStorage.getItem('ogs.config.user') || "null");
                 if (user && !user.anonymous) {
-                  remote_theme = 
+                  remote_theme =
                       JSON.parse(
                           localStorage.getItem('ogs-remote-storage-store.' + user.id + '.theme')
                       ).value;
