Add workaround for google translate breaking our site sometimes

--- a/src/index.html
+++ b/src/index.html
@@ -153,6 +153,42 @@
   </head>
   <body>
       <script>
+        /* When browsers use Google Translate it breaks React apps like ours because they
+         * replace text nodes with <font> tags, changing the dom structure and causing
+         * React to throw errors. 
+         *
+         * This code is the workaround described by the react team here:
+         *   https://github.com/facebook/react/issues/11538#issuecomment-417504600
+         */
+        try {
+            if (typeof Node === 'function' && Node.prototype) {
+                var originalRemoveChild = Node.prototype.removeChild;
+                Node.prototype.removeChild = function(child) {
+                    if (child.parentNode !== this) {
+                        if (console) {
+                            console.error('Cannot remove a child from a different parent', child, this);
+                        }
+                        return child;
+                    }
+                    return originalRemoveChild.apply(this, arguments);
+                }
+
+                var originalInsertBefore = Node.prototype.insertBefore;
+                Node.prototype.insertBefore = function(newNode, referenceNode) {
+                    if (referenceNode && referenceNode.parentNode !== this) {
+                        if (console) {
+                            console.error('Cannot insert before a reference node from a different parent', referenceNode, this);
+                        }
+                        return newNode;
+                    }
+                    return originalInsertBefore.apply(this, arguments);
+                }
+            }
+        } catch (e) {
+            console.error(e);
+        }
+      </script>
+      <script>
         try {
             var remote_theme = null;
             try {
