--- a/src/index.html
+++ b/src/index.html
@@ -351,11 +351,13 @@
         function getPreferredLanguage() {
             try {
                 var set_lang = JSON.parse(localStorage.getItem('ogs.preferences.language') || 'null');
-                var lang = isSupportedLanguage(set_lang);
-                if (lang) {
-                    return lang;
-                } else if (set_lang && localStorage.getItem('ogs.preferences.language') != '"auto"') {
-                    console.error('User selected language: ', localStorage.getItem('ogs.preferences.language'), 'is not a recognized supported language');
+                if (set_lang !== "auto") {
+                    var lang = isSupportedLanguage(set_lang);
+                    if (lang) {
+                        return lang;
+                    } else if (set_lang && localStorage.getItem('ogs.preferences.language') != '"auto"') {
+                        console.error('User selected language: ', localStorage.getItem('ogs.preferences.language'), 'is not a recognized supported language');
+                    }
                 }
             } catch (e) {
                 console.error(e);
