WIP removing webpack/gulp and updating deployment targets

--- a/src/index.html
+++ b/src/index.html
@@ -457,15 +457,7 @@
             else window.addEventListener("load", loadDeferredStyles);
         </script>
 
-        <script
-            defer
-            src="https://cdn.online-go.com/lib/es6-shim/0.35.3/es6-shim{{MIN}}.js"
-        ></script>
         <script defer src="https://cdn.online-go.com/lib/jquery/3.1.1/jquery{{MIN}}.js"></script>
-        <!--
-        <script defer src="{{GOBAN_JS}}"></script>
-        <script defer src="{{CDN_SERVICE}}/{{RELEASE}}/vendor.{{VENDOR_HASH_DOTJS}}"></script>
-        -->
 
         <script type="text/javascript">
             var supported_languages = {{SUPPORTED_LANGUAGES}};
@@ -628,7 +620,7 @@
             function version_print_setters() {
                 var ret = "\n\n";
 
-                var scripts = $("script");
+                var scripts = document.getElementsByTagName("script");
                 for (var idx = 0; idx < scripts.length; ++idx) {
                     var m = scripts[idx].src.match(/https?:\/\/[^\/]+\/(.*\/ogs\..*\.js)/);
                     if (m) {
@@ -637,7 +629,7 @@
                     }
                 }
 
-                var stylesheets = $("link");
+                var stylesheets = document.getElementsByTagName("link");
                 for (var idx = 0; idx < stylesheets.length; ++idx) {
                     if (stylesheets[idx].rel === "stylesheet") {
                         var m = stylesheets[idx].href.match(
